<resources>
    <string name="app_name">Bake that cake</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_next_step">Next step</string>
    <string name="txt_prev_step">Previous step</string>
    <string name="txt_media_desciption">Recipe media image</string>
    <string name="txt_ingredients">Ingredients</string>
    <string name="txt_ingredients_format">Ingredients for %s (%d servings)</string>
    <string name="txt_okay">Okay</string>
    <string name="txt_servings">For %d servings</string>
    <string name="appwidget_text">No recipe viewed yet. Tap to get started</string>
    <string name="add_widget">Add widget</string>
    <string name="remote_clear_status">Resets widget status</string>
    <string name="txt_background_image_widget">Widget background</string>
    <string name="txt_remote_status">Step %d</string>
    <string name="txt_ingredient_display">%s - %f %s</string>
    <string name="txt_continue">Go</string>
    <string name="step_widget_preview">Recipe preview</string>
    <string name="step_recpice_display">%s \n (step %d)</string>
    <string name="configure">Configure</string>
    <string name="txt_widget_error">Error loading widget</string>
</resources>
